--- a/aluraCar/package.json
+++ b/aluraCar/package.json
@@ -28,7 +28,7 @@
     "sw-toolbox": "3.4.0"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "1.0.0",
+    "@ionic/app-scripts": "^3.1.11",
     "@ionic/lab": "1.0.6",
     "typescript": "2.0.9"
   },
